objects/Sales_Product_Rate_Plan__c/Sales_Product_Rate_Plan__c.object-meta.xml
<CustomObject>
    <label>Sales Product Rate Plan</label>
    <nameField>
        <displayFormat>SPRP-{0000}</displayFormat>
        <label>Sales Product Rate Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Product Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>