objects/Sales_Product_Rate_Plan__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <formula>Access_Types__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Type</label>
    <type>Text</type>
</CustomField>