objects/Sales_Product_Rate_Plan__c/fields/Auto_Included__c.field-meta.xml
<CustomField>
    <fullName>Auto_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Included</label>
    <type>Checkbox</type>
</CustomField>