objects/Sales_Product_Rate_Plan__c/fields/Feature_Grouping_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Grouping_Name__c</fullName>
    <formula>Sales_Rate_Plan_Description__r.Feature_Grouping__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Grouping Name</label>
    <type>Text</type>
</CustomField>