objects/Sales_Product_Rate_Plan__c/fields/ICC_Product_Per_Qty__c.field-meta.xml
<CustomField>
    <fullName>ICC_Product_Per_Qty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Frequently or always needs to attach another product</description>
    <label>ICC Product Per Qty</label>
    <type>Checkbox</type>
</CustomField>