objects/Sales_Product_Rate_Plan__c/fields/IsEEL__c.field-meta.xml
<CustomField>
    <fullName>IsEEL__c</fullName>
    <formula>IF(Sales_Rate_Plan_Description__r.IsEEL__c, &#39;Yes&#39;, &#39;No&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsEEL</label>
    <type>Text</type>
</CustomField>