objects/Sales_Product_Rate_Plan__c/fields/LD_Interstate__c.field-meta.xml
<CustomField>
    <fullName>LD_Interstate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LD Interstate</label>
    <type>Checkbox</type>
</CustomField>