objects/Sales_Product_Rate_Plan__c/fields/Package_Feature__c.field-meta.xml
<CustomField>
    <fullName>Package_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Feature</label>
    <type>Checkbox</type>
</CustomField>