objects/Sales_Product_Rate_Plan__c/fields/Per_Account__c.field-meta.xml
<CustomField>
    <fullName>Per_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Account</label>
    <type>Checkbox</type>
</CustomField>