objects/Sales_Product_Rate_Plan__c/fields/Sales_Product_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product_External_ID__c</fullName>
    <formula>Sales_Product__r.SalesProductExternalID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Product External ID</label>
    <type>Text</type>
</CustomField>