objects/Sales_Product_Rate_Plan__c/fields/Sales_Rate_Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rate_Plan_Description__c</fullName>
    <label>Sales Rate Plan Description</label>
    <referenceTo>Sales_Rate_Plan_Description__c</referenceTo>
    <relationshipLabel>Sales Product Rate Plans</relationshipLabel>
    <relationshipName>Sales_Product_Rate_Plans</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>