objects/Sales_Product_Rate_Plan__c/fields/Sales_Selection_Rule__c.field-meta.xml
<CustomField>
    <fullName>Sales_Selection_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Selection Rule</label>
    <referenceTo>Sales_Selection_Rules__c</referenceTo>
    <relationshipLabel>Sales Product Rate Plans</relationshipLabel>
    <relationshipName>Sales_Product_Rate_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>