objects/Sales_Product_Rate_Plan__c/fields/SalesRatePlanType__c.field-meta.xml
<CustomField>
    <fullName>SalesRatePlanType__c</fullName>
    <description>Type of Rate Plan identifying type of technical details needed</description>
    <label>Sales Rate Plan Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>