objects/Sales_Product_Rate_Plan__c/fields/Voice_Line_Option__c.field-meta.xml
<CustomField>
    <fullName>Voice_Line_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voice Line Option</label>
    <type>Checkbox</type>
</CustomField>