objects/Sales_Product_Rate_Plan__c/listViews/Active_Sales_Product_Rate_Plans.listView-meta.xml
<ListView>
    <fullName>Active_Sales_Product_Rate_Plans</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Access_Type_ID__c</columns>
    <columns>Access_Types__c</columns>
    <columns>Bandwidth__c</columns>
    <columns>SalesProductRatePlanExternalID__c</columns>
    <columns>Expiration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active Sales Product Rate Plans</label>
</ListView>