objects/Sales_Product_Rate_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sales_Product__c</columns>
    <columns>SalesProductRatePlanExternalID__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Auto_Included__c</columns>
    <columns>Access__c</columns>
    <columns>Bandwidth__c</columns>
    <columns>Feature_Grouping_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>