objects/Sales_Product_Rate_Plan__c/listViews/Not_affecting_feature_Schedule.listView-meta.xml
<ListView>
    <fullName>Not_affecting_feature_Schedule</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Feature_Grouping_Name__c</columns>
    <columns>MinQty__c</columns>
    <columns>MaxQty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Voice_Line__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Voice_Line_Option__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Not affecting feature Schedule</label>
</ListView>