objects/Sales_Product_Rate_Plan__c/listViews/Package_features.listView-meta.xml
<ListView>
    <fullName>Package_features</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Package_Feature__c</columns>
    <columns>AdditionalInformationPrompt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Package_Feature__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Package Features</label>
</ListView>