objects/Sales_Product_Rate_Plan__c/listViews/Packages.listView-meta.xml
<ListView>
    <fullName>Packages</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Package__c</columns>
    <columns>Per_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Package__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Packages</label>
</ListView>