objects/Sales_Product_Rate_Plan__c/listViews/Sales_Rate_Plans_with_Bandwidth.listView-meta.xml
<ListView>
    <fullName>Sales_Rate_Plans_with_Bandwidth</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Sales_Product_Name__c</columns>
    <columns>Feature_Grouping_Name__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Bandwidth__c</columns>
    <columns>Access_Types__c</columns>
    <columns>Access_Type_ID__c</columns>
    <columns>SalesProductRatePlanExternalID__c</columns>
    <columns>Expiration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Feature_Grouping_Name__c</field>
        <operation>contains</operation>
        <value>bandwidth</value>
    </filters>
    <filters>
        <field>Feature_Grouping_Name__c</field>
        <operation>contains</operation>
        <value>Cloud Firewall</value>
    </filters>
    <label>Sales Rate Plans with Bandwidth</label>
</ListView>