objects/Sales_Product_Rate_Plan__c/listViews/Stand_alone_features.listView-meta.xml
<ListView>
    <fullName>Stand_alone_features</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Feature_Grouping_Name__c</columns>
    <columns>Voice_Line_Option__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Package__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Voice_Line_Option__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Stand-alone voice features</label>
</ListView>